force-app/main/default/objects/TransUnion_API_Call_History__c/TransUnion_API_Call_History__c.object-meta.xml
<CustomObject>
    <label>TransUnion API Call History</label>
    <nameField>
        <displayFormat>TU-{00000000}</displayFormat>
        <label>Last TU Credit Report Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TransUnion API Call Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>