force-app/main/default/objects/TransUnion_API_Call_History__c/fields/API_Call_DateTime__c.field-meta.xml
<CustomField>
    <fullName>API_Call_DateTime__c</fullName>
    <description>When the API call was requested</description>
    <inlineHelpText>When the API call was requested</inlineHelpText>
    <label>API Call DateTime</label>
    <type>DateTime</type>
</CustomField>