force-app/main/default/objects/TransUnion_API_Call_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TransUnion API Call Histories</relationshipLabel>
    <relationshipName>TransUnion_API_Call_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>