force-app/main/default/objects/TransUnion_API_Call_History__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>API request XML data</description>
    <inlineHelpText>API request XML data</inlineHelpText>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>