force-app/main/default/objects/TransUnion_API_Call_History__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>API response XML data</description>
    <inlineHelpText>API response XML data</inlineHelpText>
    <label>Response</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>