force-app/main/default/objects/TransUnion_API_Call_History__c/fields/Result_Of_This_API_Call__c.field-meta.xml
<CustomField>
    <fullName>Result_Of_This_API_Call__c</fullName>
    <label>Result Of This API Call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>