force-app/main/default/objects/TransUnion_API_Call_History__c/fields/TransUnion_API_Called__c.field-meta.xml
<CustomField>
    <fullName>TransUnion_API_Called__c</fullName>
    <description>Which API was called</description>
    <inlineHelpText>Which API was called</inlineHelpText>
    <label>TransUnion API Called</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Request</fullName>
            </value>
            <value>
                <fullName>People Search (TLO)</fullName>
                <isActive>false</isActive>
                <label>People Search (TLO)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>