force-app/main/default/objects/TransUnion_API_Call_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>TransUnion_API_Called__c</columns>
    <columns>Result_Of_This_API_Call__c</columns>
    <columns>API_Call_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>